--- a/MRMDesktopUI/Views/LoginView.xaml
+++ b/MRMDesktopUI/Views/LoginView.xaml
@@ -18,26 +18,34 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Margin="0 0 0 20" HorizontalAlignment="Center" FontSize="64" FontFamily="Segoe UI Light">
             Login Form
         </TextBlock>
         
+        
+        <!-- Error Message Row -->
+        <TextBlock x:Name="ErrorMessage" Visibility ="{Binding IsErrorVisible, Converter= {StaticResource BooleanToVisibilityConverter}, FallbackValue=Collapsed}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" 
+                   Foreground="Red" Margin="0 0 0 20"
+                   MaxWidth="300" TextWrapping="Wrap">
+            
+        </TextBlock>
         <!-- Username Row -->
-        <TextBlock Grid.Row="1" Grid.Column="1" Margin="0 0 0 10">
+        <TextBlock Grid.Row="2" Grid.Column="1" Margin="0 0 5 10">
             Username:
         </TextBlock>
-        <TextBox x:Name="UserName" Grid.Row="1" Grid.Column="2" MinWidth="150" Margin="0 0 0 10"/>
+        <TextBox x:Name="UserName" Grid.Row="2" Grid.Column="2" MinWidth="350" Margin="0 0 0 10"/>
         
         <!--Password Row-->
-        <TextBlock Grid.Row="2" Grid.Column="1" Margin="0 0 0 10">
+        <TextBlock Grid.Row="3" Grid.Column="1" Margin="0 0 5 10">
             Password:
         </TextBlock>
-        <PasswordBox x:Name="Password" Grid.Row="2" Grid.Column="2" MinWidth="150" Margin="0 0 0 10"/>
+        <PasswordBox x:Name="Password" Grid.Row="3" Grid.Column="2" MinWidth="350" Margin="0 0 0 10"/>
 
         <!--Login row-->
-        <Button Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" x:Name="LogIn" Padding="20 5">
+        <Button Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" x:Name="LogIn" Padding="20 5">
             Log In
         </Button>
     </Grid>
